Fix spacings

--- a/style.css
+++ b/style.css
@@ -32,10 +32,11 @@ body {
 }
 
 .card {
-	width: 55%;
+	width: 50%;
 	border-radius: 2rem;
-	margin: 11rem auto;
+	margin: 12rem auto;
 	padding: 4rem;
+	padding-bottom: 0;
 	font-size: 1.6rem;
 }
 
@@ -57,7 +58,7 @@ body {
 	font-size: 3.9rem;
 	color: hsl(24, 5%, 18%);
 	margin: 2rem 0;
-	font-family: 500;
+	font-weight: 500;
 }
 
 .header__description {
@@ -74,7 +75,7 @@ body {
 
 .prep-time {
 	width: 100%;
-	padding: 3rem;
+	padding: 2rem;
 	background-color: hsl(330, 100%, 98%);
 	border-radius: 1rem;
 }
@@ -112,7 +113,7 @@ li::marker {
 .ingredients,
 .instructions,
 .nutrition {
-	margin: 3rem 0;
+	margin: 2rem 0;
 }
 
 .mid-title {
